@@ -27,6 +27,7 @@ namespace SimpleInjector
 {
     using System;
     using System.Globalization;
+    using System.Linq;
     using System.Linq.Expressions;
     using System.Reflection;
 
@@ -43,14 +44,14 @@ namespace SimpleInjector
         internal static string DelegateForTypeReturnedNull(Type serviceType)
         {
             return string.Format(CultureInfo.InvariantCulture,
-                "The registered delegate for type {0} returned null.", serviceType);
+                "The registered delegate for type {0} returned null.", serviceType.ToFriendlyName());
         }
 
         internal static string ErrorWhileTryingToGetInstanceOfType(Type serviceType)
         {
             return string.Format(CultureInfo.InvariantCulture,
-                "Error occurred while trying to get instance of type {0}.",
-                serviceType);
+                "Error occurred while trying to get an instance of type {0}.",
+                serviceType.ToFriendlyName());
         }
 
         internal static string ErrorWhileBuildingDelegateFromExpression(Type serviceType, 
@@ -59,40 +60,42 @@ namespace SimpleInjector
             return string.Format(CultureInfo.InvariantCulture,
                 "Error occurred while trying to build a delegate for type {0} using the expression \"{1}\" " +
                 "that was supplied by calling the UnregisteredTypeEventArgs.Register(Expression) method. {2}",
-                serviceType, expression, exception.Message);
+                serviceType.ToFriendlyName(), expression, exception.Message);
         }
            
         internal static string DelegateForTypeThrewAnException(Type serviceType)
         {
             return string.Format(CultureInfo.InvariantCulture,
-                "The registered delegate for type {0} threw an exception.", serviceType);
+                "The registered delegate for type {0} threw an exception.", serviceType.ToFriendlyName());
         }
 
         internal static string NoRegistrationForTypeFound(Type serviceType)
         {
             return string.Format(CultureInfo.InvariantCulture,
-                "No registration for type {0} could be found.", serviceType);
+                "No registration for type {0} could be found.", serviceType.ToFriendlyName());
         }
 
-        internal static string ConfigurationInvalidCreatingInstanceFailed(Type type, Exception exception)
+        internal static string ConfigurationInvalidCreatingInstanceFailed(Type serviceType, 
+            Exception exception)
         {
             return string.Format(CultureInfo.InvariantCulture,
                 "The configuration is invalid. Creating the instance for type {0} failed. {1}",
-                type, exception.Message);
+                serviceType.ToFriendlyName(), exception.Message);
         }
 
-        internal static string ConfigurationInvalidIteratingCollectionFailed(Type type, Exception exception)
+        internal static string ConfigurationInvalidIteratingCollectionFailed(Type serviceType, 
+            Exception exception)
         {
             return string.Format(CultureInfo.InvariantCulture,
                 "The configuration is invalid. Iterating the collection for type {0} failed. {1}",
-                type, exception.Message);
+                serviceType.ToFriendlyName(), exception.Message);
         }
 
-        internal static string ConfigurationInvalidCollectionContainsNullElements(Type firstInvalidType)
+        internal static string ConfigurationInvalidCollectionContainsNullElements(Type firstInvalidServiceType)
         {
             return string.Format(CultureInfo.InvariantCulture,
                 "The configuration is invalid. One of the items in the collection for type {0} is " +
-                "a null reference.", firstInvalidType);
+                "a null reference.", firstInvalidServiceType.ToFriendlyName());
         }
 
         internal static string TypeAlreadyRegistered(Type serviceType)
@@ -102,7 +105,8 @@ namespace SimpleInjector
                 "and the container is currently not configured to allow overriding registrations. " +
                 "To allow overriding the current registration, please create the container using the " + 
                 "constructor overload that takes a {1} instance and set the " +
-                "AllowOverridingRegistrations to true.", serviceType, typeof(ContainerOptions).Name);
+                "AllowOverridingRegistrations property to true.", 
+                serviceType.ToFriendlyName(), typeof(ContainerOptions).Name);
         }
 
         internal static string CollectionTypeAlreadyRegistered(Type serviceType)
@@ -112,17 +116,17 @@ namespace SimpleInjector
                 "and the container is currently not configured to allow overriding registrations. " +
                 "To allow overriding the current registration, please create the container using the " +
                 "constructor overload that takes a {1} instance and set the " +
-                "AllowOverridingRegistrations to true.", serviceType, typeof(ContainerOptions).Name);
+                "AllowOverridingRegistrations property to true.", 
+                serviceType.ToFriendlyName(), typeof(ContainerOptions).Name);
         }
 
-        internal static string ParameterTypeMustBeRegistered(Type serviceType, Type parameterType)
+        internal static string ParameterTypeMustBeRegistered(Type implementationType, Type parameterType)
         {
             return string.Format(CultureInfo.InvariantCulture,
-                ImplicitRegistrationCouldNotBeMadeForType(serviceType) +
-                    "The constructor of the type contains the parameter of type {0} that is not registered. " +
-                    "Please ensure {1} is registered in the container, change the constructor of the " +
-                    "type or register the type {2} directly.",
-                    parameterType, parameterType.Name, serviceType.Name);
+                ImplicitRegistrationCouldNotBeMadeForType(implementationType) +
+                "The constructor of the type contains the parameter of type {0} that is not registered. " +
+                "Please ensure {0} is registered in the container, or change the constructor of {1}.", 
+                parameterType.ToFriendlyName(), implementationType.ToFriendlyName());
         }
 
         internal static string TypeMustHaveASinglePublicConstructor(Type serviceType)
@@ -130,23 +134,31 @@ namespace SimpleInjector
             return string.Format(CultureInfo.InvariantCulture,
                 "For the container to be able to create {0}, it should contain exactly one public " + 
                 "constructor, but it has {1}.",
-                serviceType, serviceType.GetConstructors().Length);
+                serviceType.ToFriendlyName(), serviceType.GetConstructors().Length);
         }
 
         internal static string ConstructorMustNotContainInvalidParameter(Type serviceType, 
             ParameterInfo invalidParameter)
         {
+            string reason = string.Empty;
+
+            if (invalidParameter.ParameterType.IsValueType)
+            {
+                reason = " because it is a value type";
+            }
+
             return string.Format(CultureInfo.InvariantCulture,
                 "The constructor of type {0} contains parameter '{1}' of type {2} which can not be used " +
-                "for constructor injection.", serviceType, invalidParameter.Name, 
-                invalidParameter.ParameterType);
+                "for constructor injection{3}.", 
+                serviceType.ToFriendlyName(), invalidParameter.Name,
+                invalidParameter.ParameterType.ToFriendlyName(), reason);
         }
 
         internal static string TypeShouldBeConcreteToBeUsedOnThisMethod(Type serviceType)
         {
             return string.Format(CultureInfo.InvariantCulture,
                 "The given type {0} is not a concrete type. Please use one of the other overloads to " +
-                "register this type.", serviceType);
+                "register this type.", serviceType.ToFriendlyName());
         }
 
         internal static string MultipleObserversRegisteredTheSameTypeToResolveUnregisteredType(
@@ -155,8 +167,8 @@ namespace SimpleInjector
             return string.Format(CultureInfo.InvariantCulture,
                 "Multiple observers of the ResolveUnregisteredType event are registering a delegate for " +
                 "the same service type: {0}. Make sure only one of the registered handlers calls the " +
-                "ResolveUnregisteredType.Register(Func<object>) method for a given service type.",
-                unregisteredServiceType);
+                "ResolveUnregisteredType.Register method for a given service type.",
+                unregisteredServiceType.ToFriendlyName());
         }
 
         internal static string DelegateRegisteredUsingResolveUnregisteredTypeThatThrewAnException(
@@ -165,14 +177,15 @@ namespace SimpleInjector
             return string.Format(CultureInfo.InvariantCulture,
                 "The delegate that was hooked to the ResolveUnregisteredType event and responded " +
                 "to the {0} service type, registered a delegate that threw an exception.",
-                serviceType);
+                serviceType.ToFriendlyName());
         }
 
         internal static string DelegateRegisteredUsingResolveUnregisteredTypeThatReturnedNull(Type serviceType)
         {
             return string.Format(CultureInfo.InvariantCulture,
                 "The delegate that was hooked to the ResolveUnregisteredType event and responded " +
-                "to the {0} service type, registered a delegate that returned a null reference.", serviceType);
+                "to the {0} service type, registered a delegate that returned a null reference.",
+                serviceType.ToFriendlyName());
         }
 
         internal static string DelegateRegisteredUsingResolveUnregisteredTypeReturnedAnUnassignableFrom(
@@ -181,21 +194,22 @@ namespace SimpleInjector
             return string.Format(CultureInfo.InvariantCulture,
                 "The delegate that was hooked to the ResolveUnregisteredType event and responded " +
                 "to the {0} service type, registered a delegate that created an instance of type {1} that " +
-                "can not be cast to the specified service type.", serviceType, actualType);
+                "can not be cast to the specified service type.",
+                serviceType.ToFriendlyName(), actualType.ToFriendlyName());
         }
 
         internal static string ImplicitRegistrationCouldNotBeMadeForType(Type serviceType)
         {
             return string.Format(CultureInfo.InvariantCulture,
                 "No registration for type {0} could be found and an implicit registration could not be made. ",
-                serviceType);
+                serviceType.ToFriendlyName());
         }
 
         internal static string TypeDependsOnItself(Type serviceType)
         {
             return string.Format(CultureInfo.InvariantCulture,
                 "The configuration is invalid. The type {0} is directly or indirectly depending on itself.",
-                serviceType);
+                serviceType.ToFriendlyName());
         }
 
         internal static string UnableToResolveTypeDueToSecurityConfiguration(Type serviceType, 
@@ -204,8 +218,8 @@ namespace SimpleInjector
             return string.Format(CultureInfo.InvariantCulture,
                 "Unable to resolve type {0}. The security restrictions of your application's sandbox do " +
                 "not permit the creation of this type. Explicitly register the type using one of the " +
-                "generic 'Register' overloads or consider making it public. {1}", serviceType, 
-                innerException.Message);
+                "generic 'Register' overloads or consider making it public. {1}", 
+                serviceType.ToFriendlyName(), innerException.Message);
         }
 
         internal static string UnableToInjectPropertiesDueToSecurityConfiguration(Type injectee,
@@ -216,7 +230,21 @@ namespace SimpleInjector
                 "sandbox do not permit the creation of one of its dependencies. Explicitly register that " +
                 "dependency using one of the generic 'Register' overloads or consider making it public. " +
                 "Please see the inner exception for more details about which type caused this failure. {1}",
-                injectee, innerException.Message);
+                injectee.ToFriendlyName(), innerException.Message);
+        }
+
+        private static string ToFriendlyName(this Type type)
+        {
+            if (!type.IsGenericType)
+            {
+                return type.Name;
+            }
+
+            string name = type.Name.Substring(0, type.Name.IndexOf('`'));
+
+            var genericArguments = type.GetGenericArguments().Select(argument => argument.ToFriendlyName());
+
+            return name + "<" + string.Join(", ", genericArguments.ToArray()) + ">";
         }
     }
 }
